--- a/style.css
+++ b/style.css
@@ -50,51 +50,57 @@ main{
 }
 .btn:hover{
   background-color: #555;
-  /* border:  solid 2px #23dd12;
-  transition: ease-in-out; */
 }
-.featured-products{
+/* .featured-products{
   text-align: center;
-}
-.products-container{
+} */
+/* .products-container{
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
   justify-content: center;
   max-width: 1300px;
   margin: 0 auto;
-}
-.product{
-  width: 300px;
-  height: 300px;
+} */
+/* .product{
+  width: 200px;
+  height: 200px;
   margin: 0 1rem;
   text-align: center;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-}
-.product:hover{
+} */
+/* .product:hover{
   transform: translateY(-5px);
-}
-.product img{
+} */
+/* .product img{
   width: 100%;
   height: auto;
   border-radius: 10px 10px 0 0;
-}
+} */
+/* .product .product-info{
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+  border-radius: 0 0 5px 5px;
+} */
 
 
 
 
 
-
-.product h3{
-    margin-top: 1rem;
-}
-.product p.price{
+/* .product h3, .product .price{
+  margin: 0;
+} */
+/* .product p.price{
     font-weight: bold;
-}
-.product .buy-btn{
+} */
+/* .product .buy-btn{
     display: inline-block;
     background-color: #333;
     color: #fff;
@@ -104,10 +110,27 @@ main{
     border-radius: 5px;
     transition: background-color 0.3s ease;
     cursor: pointer;
-}
-.product .buy-btn:hover{
+} */
+/* .product .buy-btn:hover{
     background-color: #555;
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer{
   text-align: center;
