--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ header h1{
 nav ul{
   list-style-type: none;
 }
-
 nav ul li{
   display: inline;
   margin-right: 1rem;
@@ -52,18 +51,25 @@ main{
   background-color: #555;
 }
 .featured-products h2{
+  width: 1440px;
+  margin: auto;
   text-align: center;
+  font-size: xx-large;
 }
 .products-container{
-  padding: 2rem 0;
+  width: 1440px;
+  max-width: 144vw;
+  margin: auto;
+  padding: 0.8rem;
   background-color: #f9f9f9;
-  display: flex;
-  justify-content: space-around;
-  overflow-x: hidden;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: .5rem;
+  /* overflow-x: hidden; */
 }
 .product{
-  width: 250px;
-  margin-bottom: 0.7rem;
+  width: 90%;
+  margin-bottom: 0.5rem;
   text-align: center;
 }
 .product:hover{
@@ -76,15 +82,7 @@ main{
 .product h3{
   margin-top: 0.7rem;
 }
-/* .product .product-info{
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  right: 0;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 5px;
-  border-radius: 0 0 5px 5px;
-} */
+
 
 
 
@@ -94,38 +92,6 @@ main{
   font-weight: bold;
   color: #333;
 }
-/* .product p.price{
-    font-weight: bold;
-} */
-/* .product .buy-btn{
-    display: inline-block;
-    background-color: #333;
-    color: #fff;
-    padding: 0.5rem 1rem;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
-} */
-/* .product .buy-btn:hover{
-    background-color: #555;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -135,3 +101,5 @@ footer{
   color: #fff;
   padding: 1rem;
 }
+/*   border: #333 solid;
+ */
